# IDBuilder

./: .gitignore  .pnp.cjs  README.md  package.json  shell.nix  tsconfig.json  vite.config.ts
IDBuilder4/: IDBuilder4.sln
IDBuilder4/Design/: index.html
IDBuilder4/IDBuilder4/: App.xaml  App.xaml.cs  IDBuilder4 - Backup.csproj  IDBuilder4.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Startup.cs  electron.manifest.json
IDBuilder4/IDBuilder4/Controllers/: HomeController.cs  MainController.cs
IDBuilder4/IDBuilder4/Models/: ErrorViewModel.cs
IDBuilder4/IDBuilder4/Properties/: launchSettings.json
IDBuilder4/IDBuilder4/Properties/PublishProfiles/: FolderProfile.pubxml
IDBuilder4/IDBuilder4/Views/: _ViewImports.cshtml
IDBuilder4/IDBuilder4/Views/Main/: Home.cshtml
IDBuilder4/IDBuilder4/Views/Shared/: _Layout.cshtml
IDBuilder4/IDBuilder4/wwwroot/: index.html
IDBuilder4/IDBuilder4/wwwroot/dependences/: qs.min.js
IDBuilder4/UI/: index.html
IDBuilder5/idb5-server/: app.fs  idb5-server.fsproj
IDBuilder5/idb5-server/IdView/: IdView.fs
IDBuilder5/idb5-server/views/: CryptoView.fs  HashView.fs  IdView.fs  StringView.fs  TimeView.fs
IDBuilder5/idb5-ui/: package-lock.json  package.json
IDBuilder5/idb5-ui/src/: App.vue  background.js  main.js
IDBuilder5/idb5-ui/src/router/: index.js
IDBuilder5/idb5-ui/src/static/: tabs.json
IDBuilder5/idb5-ui/src/views/: AboutView.vue  CryptoView.vue  HashView.vue  IdView.vue  StringView.vue  TimeView.vue
idb5-server/: app.fs  idb5-server.fsproj  idb5-server.sln
idb5-server/views/: CryptoView.fs  EncodingView.fs  HashView.fs  IdView.fs  TimeView.fs
idb5-ui/: README.md  package-lock.json  package.json  vue.config.js
idb5-ui/node_modules0/: .package-lock.json
idb5-ui/node_modules0/.cache/eslint/: 0eed2698.json  3f551a54.json  7ed3ea8c.json  f207742e.json
idb5-ui/node_modules0/@vue/babel-preset-app/: package.json
idb5-ui/node_modules0/@vue/cli-overlay/: package.json
idb5-ui/node_modules0/@vue/cli-plugin-babel/: package.json
idb5-ui/node_modules0/@vue/cli-plugin-eslint/: package.json
idb5-ui/node_modules0/@vue/cli-plugin-router/: package.json
idb5-ui/node_modules0/@vue/cli-plugin-vuex/: package.json
idb5-ui/node_modules0/vue-cli-plugin-vuetify/: package.json
idb5-ui/node_modules0/vue-eslint-parser/: index.js  index.js.map
idb5-ui/node_modules0/vuetify/: package.json
idb5-ui/node_modules0/vuetify-loader/: package.json
idb5-ui/scripts/: modifyFontFilepath.js
idb5-ui/src/: App.vue  background.js  main.js
idb5-ui/src/plugins/: vuetify.js
idb5-ui/src/router/: index.js
idb5-ui/src/static/: tabs.json
idb5-ui/src/views/: AboutView.vue  CryptoView.vue  EncodingView.vue  HashView.vue  IdView.vue  TimeView.vue
src/: App.vue  main.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: main.rs  view.rs
src-tauri/src/view/: crypto.rs  encoding.rs  hash.rs  id.rs  time.rs
src/components/: AboutView.vue  CryptoView.vue  EncodingView.vue  HashView.vue  IdView.vue  TimeView.vue
src/plugins/: router.ts  vuetify.ts
(+892 files in other folders)
