[package]
name = "idbuilder"
version = "6.0.0"
description = "ID generate tool"
authors = ["Thaumy"]
license = "MIT"
repository = "https://github.com/Thaumy/IDBuilder"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
rsa = "0.7.2"
md5 = "0.7.0"
hex = "0.4.3"
rand = "0.8.5"
sha256 = "1.1.1"
bcrypt = "0.13.0"
base64 = "0.20.0"
chrono = "0.4.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
