[package]
name = "idbuilder"
version = "6.0.3"
description = "ID generate tool"
authors = ["Thaumy"]
license = "MIT"
repository = "https://github.com/Thaumy/IDBuilder"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
hex = "0.4.3"
rsa = "0.9.0"
rand = "0.8.5"
uuid = "1.2.2"
sha2 = "0.10.6"
bcrypt = "0.14.0"
base64 = "0.21.0"
chrono = "0.4.23"
serde_json = "1.0"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }

# please put these dependencies into src-tauri/deps folder
ruster = { path = "./deps/ruster" }
palaflake = { path = "./deps/palaflake" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
